--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   --dark-color: #00010D;
   --white-color: #ffffff;
   --danger-color: #D03A41;
-  --alert-color: #F1CC07;
+  --warning-color: #F1CC07;
   --success-color: #0AE569;
   --info-color: #5C73F2;
 }
@@ -108,8 +108,8 @@ b, strong {
   background-color: var(--danger-color);
 }
 
-.bg-alert {
-  background-color: var(--alert-color);
+.bg-warning {
+  background-color: var(--warning-color);
 }
 
 .bg-success {
@@ -145,8 +145,8 @@ b, strong {
   color: var(--danger-color);
 }
 
-.txt-alert {
-  color: var(--alert-color);
+.txt-warning {
+  color: var(--warning-color);
 }
 
 .txt-success {
@@ -164,4 +164,223 @@ b, strong {
   padding: 16px;
   border-radius: 8px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+/* Flexbox */
+.flex {
+  display: flex !important;
+}
+
+.f-row {
+  flex-direction: row !important;
+}
+
+.f-column {
+  flex-direction: column !important;
+}
+
+.f-row-reverse {
+  flex-direction: row-reverse !important;
+}
+
+.f-column-reverse {
+  flex-direction: column-reverse !important;
+}
+
+.f-wrap {
+  flex-wrap: wrap;
+}
+
+.j-c-center {
+  justify-content: center !important;
+}
+
+.j-c-start {
+  justify-content: flex-start !important;
+}
+
+.j-c-end {
+  justify-content: flex-end !important;
+}
+
+.j-c-between {
+  justify-content: space-between !important;
+}
+
+.j-c-around {
+  justify-content: space-around !important;
+}
+
+.a-i-center {
+  align-items: center !important;
+}
+
+.a-i-start {
+  align-items: flex-start !important;
+}
+
+.a-i-end {
+  align-items: flex-end !important;
+}
+
+/* Margin classes */
+.m-0 {
+  margin: 0px;
+}
+
+.m-1 {
+  margin: 8px;
+}
+
+.m-2 {
+  margin: 16px;
+}
+
+.m-3 {
+  margin: 32px;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-1 {
+  margin-top: 8px;
+}
+
+.mt-2 {
+  margin-top: 16px;
+}
+
+.mt-3 {
+  margin-top: 32px;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.mr-1 {
+  margin-right: 8px;
+}
+
+.mr-2 {
+  margin-right: 16px;
+}
+
+.mr-3 {
+  margin-right: 32px;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-1 {
+  margin-bottom: 8px;
+}
+
+.mb-2 {
+  margin-bottom: 16px;
+}
+
+.mb-3 {
+  margin-bottom: 32px;
+}
+
+.ml-0 {
+  margin-left: 0px;
+}
+
+.ml-1 {
+  margin-left: 8px;
+}
+
+.ml-2 {
+  margin-left: 16px;
+}
+
+.ml-3 {
+  margin-left: 32px;
+}
+
+/* Padding classes */
+.p-0 {
+  padding: 0px;
+}
+
+.p-1 {
+  padding: 8px;
+}
+
+.p-2 {
+  padding: 16px;
+}
+
+.p-3 {
+  padding: 32px;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pt-1 {
+  padding-top: 8px;
+}
+
+.pt-2 {
+  padding-top: 16px;
+}
+
+.pt-3 {
+  padding-top: 32px;
+}
+
+.pr-0 {
+  padding-right: 0px;
+}
+
+.pr-1 {
+  padding-right: 8px;
+}
+
+.pr-2 {
+  padding-right: 16px;
+}
+
+.pr-3 {
+  padding-right: 32px;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pb-1 {
+  padding-bottom: 8px;
+}
+
+.pb-2 {
+  padding-bottom: 16px;
+}
+
+.pb-3 {
+  padding-bottom: 32px;
+}
+
+.pl-0 {
+  padding-left: 0px;
+}
+
+.pl-1 {
+  padding-left: 8px;
+}
+
+.pl-2 {
+  padding-left: 16px;
+}
+
+.pl-3 {
+  padding-left: 32px;
 }
